--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -46,7 +46,7 @@
                             </label>
                         </div>
 
-                        <button type="submit" class="sign-btn" >Iniciar sesión</button>
+                        <button type="submit" class="sign-btn" >Entrar</button>
 
                         <a id="forgot-password" asp-page="./ForgotPassword" class="text">¿Olvidaste tu contraseña?</a>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="text">Enviar confirmación por Email</a>
