--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -13,9 +13,10 @@
         <p>
             <strong>La eliminación de estos datos eliminará permanentemente su cuenta y no se podrá recuperar.</strong>
         </p>
+        <!--
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
             <button class="btn btn-primary" type="submit">Descargar</button>
-        </form>
+        </form>-->
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Eliminar cuenta</a>
         </p>
