--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -43,7 +43,7 @@
 
                         </div>
 
-                        <button type="submit" class="sign-btn" >Registrarse </button>
+                        <button type="submit" class="sign-btn" >Enviar </button>
 
                         <p class="text">
                             Al registrarme, acepto las condiciones de servicio y la política de privacidad.
