--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,8 +1,14 @@
 @page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Confirmación del registro";
 }
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <div class="container">
     <h1>@ViewData["Title"]</h1>
 
@@ -23,7 +29,22 @@
     }
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <style>
+    h1{
+        font-weight: bold;
+        text-align: center;
+        padding-bottom: 25px;
+        letter-spacing: 1.1px;
+    }
+    p{
+        text-align: center;
+    }
     .container{
         width: 80%;
         max-width: 1250px;
