--- a/Views/Home/Nosotros.cshtml
+++ b/Views/Home/Nosotros.cshtml
@@ -25,8 +25,7 @@
 
     <div class="nosotros__descrip">
         <h2 class="title">¿Quienes Somos?</h2>
-        <p class="descrip__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum enim officiis perspiciatis cumque, hic at magni 
-            sunt quo earum, laborum labore, doloremque dolores recusandae alias consectetur similique! Temporibus, error molestias!
+        <p class="descrip__paragraph">Nos preocupamos por escoger cuidadosamente a nuestros proveedores, para que estos nos puedan ofrecer los alimentos más frescos, naturales y de mejor sabor. Asimismo, nos encargamos de seleccionar cautelosamente cada producto al momento de ser envasado. De esta forma aseguramos una calidad superior y a un precio accesible para nuestros clientes.
         </p>
     </div>
 
