--- a/Views/Producto/EditarProducto.cshtml
+++ b/Views/Producto/EditarProducto.cshtml
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="form-list__row">
-                        <button class="btn__add_product">Editar Producto</button>
+                        <button class="btn__add_product">Actualizar Producto</button>
                         <a asp-action="AdministrarProducto"  class="btn__volver" >Volver</a>
                     </div>
                 </form>
