--- a/Views/Receta/Recetas.cshtml
+++ b/Views/Receta/Recetas.cshtml
@@ -29,3 +29,13 @@
         </section>
     </div>
 </main>
+
+<style>
+.receta-main-tittle{
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 25px;
+    letter-spacing: 1.1px;    
+}
+</style>
