--- a/Views/Reseña/AgregarReseña.cshtml
+++ b/Views/Reseña/AgregarReseña.cshtml
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn__comentario">Comentar</button>
+        <button class="btn__comentario">Guardar</button>
         <a asp-controller="Receta" asp-action="Recetas" class="btn__volver">Volver</a>
     </form>
 </div>
