--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
     else
     {
         <li class="nav__items">
-            <a class="nav__links" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
+            <a class="nav__links" asp-area="Identity" asp-page="/Account/Register">Registrar</a>
         </li>
         <li class="nav__items">
             <a class="nav__links" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
