--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -13,7 +13,7 @@
     <h2>Administrar su cuenta</h2>
 
     <div>
-        <h4>Cambiar la configuración de su cuenta</h4>
+        <h4 class="subtitle">Cambiar la configuración de su cuenta</h4>
         <hr />
         <div class="row">
             <div class="col-md-3">
@@ -31,3 +31,37 @@
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
+
+<style>
+h2{
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 25px;
+    letter-spacing: 1.1px;
+}    
+.subtitle{
+    text-align: center;
+}
+
+.btn{
+    display: inline-block;
+    width: 100%;
+    background-color: #151111;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 0.8rem;
+    font-size: 1.1rem;
+    margin-bottom: 2rem;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background-color: #007175;
+    color: #fff;
+}
+
+.btn:focus{
+    outline-style: none;
+}
+</style>
