--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -13,3 +13,16 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Autenticación de dos factores</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Datos personales</a></li>
 </ul>
+
+<style>
+.nav-pills .nav-link.active{
+    background-color: #fff;
+    color: #000;
+    border: 2px solid #000;
+}
+
+a{
+    color: #000;
+}
+
+</style>
