--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,80 +16,122 @@
     </div>
 </div>
 <br>
+<br>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-6 video__con">
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/SBXYmug9oUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-6">
+            <h1 class="titulo__home">Nuestra Calidad</h1>
+            <p>Nos preocupamos por escoger cuidadosamente a nuestros proveedores, para que estos nos puedan ofrecer los alimentos más frescos, naturales y de mejor sabor. Asimismo, nos encargamos de seleccionar cautelosamente cada producto al momento de ser envasado. De esta forma aseguramos una calidad superior y a un precio accesible para nuestros clientes.</p>
+        </div>
+    </div>
+</div>
+<br>
 <style>
-    .fondo__title {
-        font-size: 52px;
-        font-family: 'Permanent Marker', cursive;
-        filter: blur(1.00px);
-    }
+.video__con{
+    display: grid;
+    grid-template-areas:
+    ". a a ."
+    ". a a .";
+}
 
-    .container-fondo {
-        width: 90%;
-        max-width: 1500px;
-        margin: auto;
-        position: relative;
-        overflow: hidden;
-    }
+.video{
+    grid-area: a;
+    align-self: center;
+    justify-self: center;
+}
 
-    .fondo {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        z-index: -1;
-    }
+.titulo__home{
+    text-align: center;
+}
+
+.titulo__home::after{
+    content: "";
+    margin: auto;
+    display: block;
+    width: 120px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    height: 4px;
+    background-color: #007175;
+}
+
+.fondo__title {
+    font-size: 52px;
+    font-family: 'Permanent Marker', cursive;
+    filter: blur(1.00px);
+}
+
+.container-fondo {
+    width: 90%;
+    max-width: 1500px;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.fondo {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: -1;
+}
 
 
-    .fondo__section {
-        width: 100%;
-        position: relative;
-    }
+.fondo__section {
+    width: 100%;
+    position: relative;
+}
 
-    .fondo__img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.fondo__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-    .fondo__content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        text-align: center;
-        z-index: 999;
-    }
+.fondo__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    z-index: 999;
+}
 
-    .fondo__title {
-        font-size: 52px;
-        font-family: 'Permanent Marker', cursive;
-    }
+.fondo__title {
+    font-size: 52px;
+    font-family: 'Permanent Marker', cursive;
+}
 
-    .fondo__txt {
-        margin: 5px 0;
-        font-size: 20px;
-        font-family: "Monaco", monospace;
-    }
+.fondo__txt {
+    margin: 5px 0;
+    font-size: 20px;
+    font-family: "Monaco", monospace;
+}
 
-    @@media (max-width: 700px){
-    .fondo__title{
-        font-size: 14px;
-        font-family: "AdineuePRO";
-    }
-    
-    .fondo__txt{
-        margin: 5px 0;
-        font-size: 10px;
-    }
-    
-    .main-tittle{
-        margin-top: 0.5rem;
-        margin-bottom: 2rem;
-        font-size: 25px;
-        text-align: center;
-        font-family: 'Righteous', cursive;
-        color: #3D272A;
-    }
-    }
+@@media (max-width: 700px){
+.fondo__title{
+    font-size: 14px;
+    font-family: "AdineuePRO";
+}
+
+.fondo__txt{
+    margin: 5px 0;
+    font-size: 10px;
+}
+
+.main-tittle{
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Righteous', cursive;
+    color: #3D272A;
+}
+}
 </style>
