--- a/Views/Home/Reclamos.cshtml
+++ b/Views/Home/Reclamos.cshtml
@@ -2,21 +2,23 @@
     ViewData["Title"] = "Consultas";
 }
 @model IEnumerable<Reclamo>
-
+@if (Model.Count() == 0){
+<h1>No tenemos reclamos 😊</h1>
+}else{
 <div class="container">
     <div>
         <h2>Reclamos</h2>
     
         <hr>
         <br>
-        <table class="table table-hover">
+        <table class="table">
         <thead class="thead-dark">
-            <tr>
+            <tr class="text-center">
                     <th scope="col">
                         @Html.DisplayNameFor(model => model.Id)
                     </th>
                     <th scope="col">
-                        @Html.DisplayNameFor(model => model.Nombre)
+                        @Html.DisplayNameFor(model => model.Nombre)  
                     </th>
                     <th scope="col">
                         @Html.DisplayNameFor(model => model.Email)
@@ -32,12 +34,12 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
+                <tr class="text-center">
                     <th scope="row">
                         @Html.DisplayFor(modelItem => item.Id)
                     </th>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
+                        @Html.DisplayFor(modelItem => item.Nombre) @Html.DisplayFor(modelItem => item.Apellido)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
@@ -54,3 +56,22 @@
         </table>
     </div>
 </div>
+}
+
+<style>
+h1{
+    font-weight: bold;
+    text-align: center;
+    font-size: 45px;
+    padding-bottom: 10px;
+    letter-spacing: 1.1px;
+}  
+
+h2{
+    font-weight: bold;
+    text-align: center;
+    font-size: 45px;
+    padding-bottom: 10px;
+    letter-spacing: 1.1px;
+} 
+</style>
