--- a/Views/MisRecetas/MisRecetas.cshtml
+++ b/Views/MisRecetas/MisRecetas.cshtml
@@ -6,19 +6,53 @@
 
 <link rel="stylesheet" href="~/css/receta.css" />
 
+<style>
+h1{
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 25px;
+    letter-spacing: 1.1px;    
+}
+.receta-main-tittle{
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 25px;
+    letter-spacing: 1.1px;
+}
+</style>
 
 <script type="text/javascript" >
-function cambiarColor(p) {
-el = document.getElementById(p);
+function cambiarColor(p,a) {
+el = document.getElementById(p,a);
     if ( el.style.color == 'rgb(0, 0, 0)' ) {
     el.style.color = 'rgb(21, 189, 21)';
     } else {
-    el.style.color = 'rgb(0, 0, 0)';        
+        el.style.color = 'rgb(0, 0, 0)';        
     }
 
-}   
+}  
+
+
+const alerta = document.querySelector('elimi')
+
+alerta.addEventListener("click",() => {
+    toastr.success('Receta Eliminada','😢',{
+        "closeButton": true,
+        "progressBar": true,
+        "positionClass": "toast-bottom-left",
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+    });
+})
 </script>
 
+@if(Model.Count()==0){
+    <h1>No tiene recetas favoritas 😢</h1>
+}else{
 <main class="main">
     <div class="container">
         <h2 class="receta-main-tittle">Recetas Favoritas</h2>
@@ -27,14 +61,14 @@ el = document.getElementById(p);
             @foreach (var item in Model)
             {
                 <div class="receta">
-                    <h4 class="receta__title" id="el_div">@Html.DisplayFor(modelItem => item.Receta.NombreReceta)</h4>
+                    <h4 class="receta__title" id="el_div"><strong> @Html.DisplayFor(modelItem => item.Receta.NombreReceta) </strong> </h4>
                     <a asp-controller="Receta" asp-action="Receta" asp-route-id="@item.Receta.Id">
                         <img src="@Html.DisplayFor(modelItem => item.Receta.Imagen)" alt="" class="recetas__img">
                     </a>
                     <div class="receta__description">
                         <div class="cont__icon">
-                            <a class= "icon__fav" style="color:red;" asp-action="QuitarReceta" asp-route-id="@item.Id"><i class="fas fa-heart"></i></a>
-                            <i class="far fa-check-square icon__check" id="alerta" onclick="cambiarColor('el_div')" ></i>
+                            <a class= "icon__fav" id="elimi" style="color:red;" asp-action="QuitarReceta" asp-route-id="@item.Id"><i class="fas fa-heart"></i></a>
+                            <i class="far fa-check-square icon__check" id="check"  onclick="cambiarColor('el_div','check')" ></i>
                             <!--<button type="button" onclick="cambiarColor('el_div')" >Cambiar color</button>-->
                         </div>
                     </div>
@@ -43,6 +77,9 @@ el = document.getElementById(p);
         </section>
     </div>
 </main>
+}
+
+
 
 <!--
 <div>
@@ -58,21 +95,3 @@ el = document.getElementById(p);
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
-<script>
-    const alerta = document.querySelector('#alerta')
-
-    alerta.addEventListener("click",() => {
-        toastr.success('Bien Hecho','Receta realizada!!',{
-            "closeButton": true,
-            "progressBar": true,
-            "positionClass": "toast-bottom-left",
-            "showDuration": "300",
-            "hideDuration": "1000",
-            "timeOut": "5000",
-            "extendedTimeOut": "1000",
-        });
-    })
-
-    
-</script>
