--- a/Views/Receta/AdministrarReceta.cshtml
+++ b/Views/Receta/AdministrarReceta.cshtml
@@ -35,6 +35,7 @@
                 </td>
                 <td class="text-center">
                     <a asp-action="EditarReceta" asp-route-id="@item.Id"><i class="fa fa-pencil"></i></a>  |
+                    <a asp-action="DetalleReceta" asp-route-id="@item.Id"><i class="fa fa-file"></i></a> |
                     <a asp-action="EliminarReceta" asp-route-id="@item.Id" class="text-danger ml-1" onclick="return confirm('¿Seguro que quieres eliminar la receta?')"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
