--- a/wwwroot/css/proforma.css
+++ b/wwwroot/css/proforma.css
@@ -158,7 +158,7 @@ td{
 .envio{
     font-family: 'Poppins', sans-serif;
     display: grid;
-    padding: 0;
+    padding: 0 0 15px 0;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 5px;
     font-size: 0.51em;
@@ -172,7 +172,7 @@ td{
 }
 
 .method__shipping__delivery{
-    padding: 0 0 15px 0;
+    padding: 0 0 0px 0;
 }
 
 /*total*/
@@ -216,28 +216,40 @@ td{
     color: #dce9e8;
 }
 
+
 .container__btn__envio{
-    width: 90%;
-    max-width: 1400px;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: 20px;
+    display: grid;
+    padding: 0;
+    grid-template-columns: repeat(1, 1fr);
 }
 
 .btn__metodo__envio{
+    cursor: pointer;
     text-align: center;
     font-family: 'Poppins', serif;
     background: #007175;
     border: 0.5px solid #007175;
     font-size: 18px;
     border-radius: 100px;
-    padding: 5px 20px;
+    padding: 5px 0px;
+    width : 100%;
+    margin: 20px 50px 0;
     color: #FFFFFF;
+    align-self: center;
+    justify-self: center;
+}
+
+.btn__metodo__envio:hover{
+    text-decoration: none;
+    background: #027e82;
+    border: 0.5px solid #027e82;
+    color: #dce9e8;
 }
 
 .btn__metodo__envio:focus{
     outline: none;
 }
+
 
 .cont__btn__env{
     display: grid;  
