--- a/Views/Proforma/Proforma.cshtml
+++ b/Views/Proforma/Proforma.cshtml
@@ -102,14 +102,21 @@
                             <div class="" >S/ @ViewBag.total </div>
                         </div>
                     </div>
+					<hr>
                     <div>
                         <div class="compra__btn">
                             <a style="color:#fff;" class="btn__finalizar__compra" data-target="#exampleModalCenter1" data-toggle="modal">Resumen de Compra</a>
                         </div>
                     </div>
-
+					<hr>
+					<div>
+						<h5 class="text-center"> <strong>Método de Pago</strong> </h5>
+						<div class="text-center">
+							<span style="font-size: 15px;">Elija su método de pago</span>
+						</div>
+					</div>
 					<div class="compra__btn">
-                        <a style="color:#fff;" class="btn__finalizar__compra" data-target="#exampleModalCenter2" data-toggle="modal">Pago Contra Entrga</a>
+                        <a style="color:#fff;" class="btn__finalizar__compra" data-target="#exampleModalCenter2" data-toggle="modal">Pago Contra Entrega</a>
                     </div>
 
                     <!-- Pasarela -->
