--- a/Views/Customer/MisPedidos.cshtml
+++ b/Views/Customer/MisPedidos.cshtml
@@ -4,7 +4,9 @@
 }
 
 <link rel="stylesheet" href="~/css/MiPedido.css" />
-
+@if(Model.Count()==0){
+    <h1 class="no__pedido">No tiene pedidos realizados!!</h1>
+}else{
 <div class="container">
     <div class="card"> 
         <h1 class="title__pedido">Mis Pedidos</h1>
@@ -57,3 +59,14 @@
         <a  class="btn__volver" asp-controller="Catalogo" asp-action="Catalogo">Regresar</a>
     </div>
 </div>
+}
+
+<style>
+.no__pedido{
+    font-weight: bold;
+    text-align: center;
+    font-size: 40px;
+    padding-bottom: 25px;
+    letter-spacing: 1.1px;    
+}
+</style>
