--- a/Views/MisRecetas/MisRecetas.cshtml
+++ b/Views/MisRecetas/MisRecetas.cshtml
@@ -34,20 +34,6 @@ el = document.getElementById(p,a);
 
 }  
 
-
-const alerta = document.querySelector('elimi')
-
-alerta.addEventListener("click",() => {
-    toastr.success('Receta Eliminada','😢',{
-        "closeButton": true,
-        "progressBar": true,
-        "positionClass": "toast-bottom-left",
-        "showDuration": "300",
-        "hideDuration": "1000",
-        "timeOut": "5000",
-        "extendedTimeOut": "1000",
-    });
-})
 </script>
 
 @if(Model.Count()==0){
@@ -68,7 +54,7 @@ alerta.addEventListener("click",() => {
                     <div class="receta__description">
                         <div class="cont__icon">
                             <a class= "icon__fav" id="elimi" style="color:red;" asp-action="QuitarReceta" asp-route-id="@item.Id"><i class="fas fa-heart"></i></a>
-                            <i class="far fa-check-square icon__check" id="check"  onclick="cambiarColor('el_div','check')" ></i>
+                            <i class="far fa-check-square icon__check" id="check"  onclick="cambiarColor('el_div')" ></i>
                             <!--<button type="button" onclick="cambiarColor('el_div')" >Cambiar color</button>-->
                         </div>
                     </div>
@@ -91,6 +77,22 @@ alerta.addEventListener("click",() => {
     </div>
 </div>
 -->
+
+<script>
+    const alerta = document.querySelector('click')
+
+    alerta.addEventListener("click",() => {
+        toastr.success('Receta realizada','bien hecho!!',{
+            "closeButton": true,
+            "progressBar": true,
+            "positionClass": "toast-bottom-left",
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+        });
+    })
+</script>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
